--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">AppListLoader</string>
     <string name="activity_title">Installed Applications</string>
-    <string name="menu_configure_locale">Change system locale</string>
+    <string name="menu_configure_locale">Change language</string>
 </resources>
